--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,6 +1,30 @@
 <!-- start custom head snippets -->
 
 <!-- insert favicons. use https://realfavicongenerator.net/ -->
-<link rel="icon" type="image/png" href="{{ "/assets/images/favicon.ico" | relative_url }}">
+<link rel="icon" type="image/png" href="{{ "/assets/images/fav.png" | relative_url }}">
 
+<style>
+    .body-font {
+        font-family: Sinhala MN;
+        font-size: 20px;
+    }
+
+    .news-font {
+        font-family: Sinhala MN;
+        font-size: 20px;
+    }
+
+    .title-font {
+        font-family: Rockwell;
+    }
+
+    .side-font {
+        font-family: Heiti SC;
+    }
+
+    .time-font {
+        font-size: 15px;
+        font-family: Sinhala MN;
+    }
+</style>
 <!-- end custom head snippets -->
