--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -5,26 +5,26 @@
 
 <style>
     .body-font {
-        font-family: Sinhala MN;
+        font-family: Sinhala MN, Optima, Arial, sans-serif;
         font-size: 20px;
     }
 
     .news-font {
-        font-family: Sinhala MN;
+        font-family: Sinhala MN, Optima, Arial, sans-serif;
         font-size: 20px;
     }
 
     .title-font {
-        font-family: Rockwell;
+        font-family: Rockwell, Kefa, Arial, sans-serif;
     }
 
     .side-font {
-        font-family: Heiti SC;
+        font-family: Heiti SC, Kefa, Arial, sans-serif;
     }
 
     .time-font {
         font-size: 15px;
-        font-family: Sinhala MN;
+        font-family: Sinhala MN, Optima, Arial, sans-serif;
     }
 </style>
 <!-- end custom head snippets -->
