--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -15,11 +15,11 @@
     }
 
     .title-font {
-        font-family: Rockwell, Oriya MN, Arial, sans-serif;
+        font-family: Rockwell, Oriya, Arial, sans-serif;
     }
 
     .side-font {
-        font-family: Heiti SC, Oriya MN, Arial, sans-serif;
+        font-family: Heiti SC, Oriya, Arial, sans-serif;
     }
 
     .time-font {
