--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -111,7 +111,9 @@ body.dark-mode .masthead {
     }
 
     body.dark-mode .site-logo img {
-        filter: invert(1);
+    filter: invert(1);
+    background-color: transparent !important;
+    background: none !important;
     }
 
     body.dark-mode .author__urls i,
